2008-12-16  Daniel Elstner  <danielk@openismus.com>

	* clutter/src/behaviour-bspline.{ccg,hg}: Remove files, as
	the functionality was merged into BehaviourPath.
	* clutter/src/path.{ccg,hg}: New files wrapping ClutterPath
	and auxiliary types.  Not complete yet.
	* clutter/src/Makefile_list_of_hg.am_fragment: Remove old
	and add new files listed above.

2008-12-16  Daniel Elstner  <danielk@openismus.com>

	* clutter/src/clutter_enums.defs: Regenerate.
	(PathNodeType): Hand-edit definition.
	(TokenType): Likewise.
	* clutter/src/clutter_methods.defs: Regenerate.
	* clutter/src/clutter_signals.defs: Regenerate.
	(Actor::*event): Hand-edit signal parameter types.

2008-12-12  Daniel Elstner  <danielk@openismus.com>

	* clutter/src/actor.hg (Actor::set_shader_param): Replace with
	generic template method to accommodate an API change in clutter.
	Doesn't build yet as the .defs still need to be regenerated.

2008-12-12  Daniel Elstner  <danielk@openismus.com>

	* tools/extra_defs_gen/generate_defs_clutter.cc: Remove reference
	to CLUTTER_TYPE_BEHAVIOUR_BSPLINE as it has been merged with the
	path behavior.
	* clutter/src/Makefile_list_of_hg.am_fragment: Remove
	behaviour-bspline.hg from the list of files.

2008-11-04  Piotr Rak <piotr.rak@gmail.com>

	* clutter/src/behaviour-depth.hg: Constructor: Rename parameter names, 
	so that gmmproc uses the correct GObject property names.
	Bug #559176

2008-11-03   Piotr Rak <piotr.rak@gmail.com>

	* configure.in: Use clutter-0.9 instead of clutter-0.8.
	* clutter/cluttermm/event.h:
	* clutter/cluttermm/frame-source.cc:
	* clutter/src/actor.ccg:
	* clutter/src/actor.hg:
	* clutter/src/alpha.ccg:
	* clutter/src/alpha.hg:
	* clutter/src/behaviour-bspline.ccg:
	* clutter/src/behaviour-depth.ccg:
	* clutter/src/behaviour-ellipse.ccg:
	* clutter/src/behaviour-opacity.ccg:
	* clutter/src/behaviour-path.ccg:
	* clutter/src/behaviour-rotate.ccg:
	* clutter/src/behaviour-scale.ccg:
	* clutter/src/behaviour.ccg: